Fix cutoff hostname

--- a/www/css/fpp.css
+++ b/www/css/fpp.css
@@ -300,7 +300,6 @@ input#MultiSyncHTTPSubnets {
 
 .headerBox span {
 	display: inline-block;
-	height: 28px;
 
 	background-position: center top;
 	vertical-align: middle;
